# music-streaming-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd-dev.yml  cd-prod.yml  cd.yml  ci.yml
docs/: architecture.arch.json  architecture.drawio  architecture.spec.yaml
scripts/: github-actions-deploy-policy.json  github-actions-trust-policy.json  query_dynamodb.sh  upload_sample_data.sh
src/dashboard/: __init__.py  app.py  dynamo_client.py
src/glue_jobs/: __init__.py  archive_files.py  ingest_to_dynamodb.py  transform_kpis.py  validate_schema.py
src/step_functions/: __init__.py  state_machine.asl.json
src/utils/: __init__.py  dynamodb_helpers.py  kpi_queries.py  logger.py  s3_helpers.py  schema_registry.py
terraform/environments/bootstrap/: README.md  backend.tf.disabled  main.tf  migrate-state.sh  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  variables.tf
terraform/main/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/github_oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/glue/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/step_functions/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_archive_files.py  test_ingest_to_dynamodb.py  test_transform_kpis.py  test_validate_schema.py
tests/unit/test_utils/: test_dynamodb_helpers.py  test_kpi_queries.py  test_logger.py  test_s3_helpers.py  test_schema_registry.py
