[project]
name = "music-streaming-pipeline"
version = "0.1.0"
description = "Serverless AWS data pipeline for music streaming KPIs (S3 + EventBridge + Step Functions + Glue + DynamoDB)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Manaf Dev" }]

# Runtime dependencies — installed in local dev environments and packaged where required.
# Glue 4.0 ships PySpark 3.3 / boto3 / awswrangler in its managed runtime, so these
# pins exist for local unit testing and parity with the Glue runtime version.
dependencies = [
    "pyspark>=3.5,<4",
    "boto3>=1.34,<2",
    "awswrangler>=3.7,<4",
    "pandas>=2.0,<3",
    "pyarrow>=14,<18",
]

[dependency-groups]
# Development tooling — installed via `uv sync --all-extras` or `uv sync --group dev`.
dev = [
    "ruff==0.4.*",
    "mypy>=1.9,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "moto[all]>=5,<6",
    "pandas-stubs>=2",
]

[tool.uv]
# Always include the dev group when running `uv sync` without explicit flags.
default-groups = ["dev"]

[build-system]
# Hatchling is uv's default build backend for projects that need to be installable.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black, isort, flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "terraform",
    "data",
]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade, B = flake8-bugbear,
# SIM = flake8-simplify, RUF = ruff-specific, D = pydocstyle (one-line docstrings on public).
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = [
    "D203",  # one-blank-line-before-class — conflicts with D211
    "D213",  # multi-line-summary-second-line — conflicts with D212
    "D107",  # __init__ docstring not required (covered by class docstring)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]            # tests don't need pydocstyle
"**/__init__.py" = ["D104"]        # package __init__ may be empty
"src/glue_jobs/*.py" = ["E402"]    # Glue jobs may need sys.path manipulation before imports

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true
files = ["src"]

# Third-party libraries without type stubs — silence missing-import errors.
[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "boto3.*",
    "botocore.*",
    "awswrangler.*",
    "moto.*",
    "awsglue.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest — 80% coverage gate for CI
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/step_functions/*"]  # ASL JSON has no Python coverage

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
